--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 body, html{
   height:100%;
+background-image: url(https://lh3.googleusercontent.com/proxy/SG62fqWpBzvKnfOO5Lyzs7ACRj02myjclDFcYjGDP_d9sxvUznRvdvjyXIJ11Rlp8Yncbdc2Q37Y9ilopNJkbCrl0xFBoqG5FDKcijlVru6UtJm9U_Bl108A-0JnJhqfKZ2Jf5RBocA4r4V9vzE0GfkbXo4xU1xJFNyMCrZyUEy9O8bl);
+background-repeat: no-repeat;
+background-size: 100vmax;
 }
 body{
   margin: 0px;
@@ -21,7 +24,51 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .dancer{
-  border:10px solid red;
-  border-radius:10px;
+height: 300px;
+width: auto;
   position:absolute;
+}
+
+.bouncing {
+  animation: bounce 0.5s infinite alternate;
+  -webkit-animation: bounce 0.5s infinite alternate;
+}
+
+@keyframes bounce {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(-10px);
+  }
+}
+@-webkit-keyframes bounce {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(-10px);
+  }
+}
+
+.sliding{
+  animation: slide 0.5s infinite alternate;
+  -webkit-animation: slide 0.5s infinite alternate;
+}
+
+@keyframes slide {
+  from {
+    transform: translateX(0px);
+  }
+  to {
+    transform: translateX(-100px);
+  }
+}
+@-webkit-keyframes slide {
+  from {
+    transform: translateX(0px);
+  }
+  to {
+    transform: translateX(-100px);
+  }
 }
