--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body, html{
   height:100%;
-background-image: url(https://lh3.googleusercontent.com/proxy/SG62fqWpBzvKnfOO5Lyzs7ACRj02myjclDFcYjGDP_d9sxvUznRvdvjyXIJ11Rlp8Yncbdc2Q37Y9ilopNJkbCrl0xFBoqG5FDKcijlVru6UtJm9U_Bl108A-0JnJhqfKZ2Jf5RBocA4r4V9vzE0GfkbXo4xU1xJFNyMCrZyUEy9O8bl);
+background-image: url("floor.jpg");
 background-repeat: no-repeat;
 background-size: 100vmax;
 }
@@ -9,8 +9,8 @@ body{
   background-color:#444;
   font-size: 18px;
 }
-body, a:link, a:visited, a:active{
-  color: lightblue;
+body, a:link, a:visited{
+  color: #ffc208;
 }
 .title, .addDancerButton{
   padding:5px 12px;
@@ -18,15 +18,21 @@ body, a:link, a:visited, a:active{
 }
 .topbar{
   height:32px;
-  background-color: #555;
+  background-color: #222221;
 }
-.title{
-  background-color: #777;
+.title, a:hover{
+  background-color: #ffc208;
+  color: black;
 }
 .dancer{
-height: 300px;
+height: 200px;
 width: auto;
   position:absolute;
+}
+
+.title, .addDancerButton,.hide, .lineUp, .Pairing, audio{
+  z-index: 3;
+  text-decoration: none;
 }
 
 .bouncing {
@@ -39,7 +45,7 @@ width: auto;
     transform: translateY(0px);
   }
   to {
-    transform: translateY(-10px);
+    transform: translateY(-40px);
   }
 }
 @-webkit-keyframes bounce {
@@ -47,7 +53,7 @@ width: auto;
     transform: translateY(0px);
   }
   to {
-    transform: translateY(-10px);
+    transform: translateY(-40px);
   }
 }
 
@@ -71,4 +77,28 @@ width: auto;
   to {
     transform: translateX(-100px);
   }
+}
+
+.hide, .lineUp, .Pairing, audio{
+  padding:5px 12px;
+  float: left;
+}
+
+.rotate {
+  animation: rotation 1s infinite linear;
+}
+
+@keyframes rotation {
+  from{
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg)
+  }
+}
+
+audio {
+  filter: sepia(150%) saturate(90%) grayscale(50) contrast(150%) invert(30%);
+  width: 400px;
+  height: 20px;
 }
